--- a/imgui.ini
+++ b/imgui.ini
@@ -3,7 +3,7 @@ Size=1540,941
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
+Pos=60,42
 Size=400,400
 Collapsed=0
 
@@ -23,22 +23,20 @@ Size=184,131
 Collapsed=0
 
 [Window][Transport]
-Pos=0,42
-Size=1540,75
+Pos=8,46
+Size=1520,72
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Demo: Playlist]
-Pos=386,119
-Size=1154,431
+Pos=393,120
+Size=1135,418
 Collapsed=0
-DockId=0x00000005,0
 
 [Window][Demo: Scene Library]
-Pos=0,119
-Size=384,410
+Pos=8,120
+Size=383,525
 Collapsed=0
-DockId=0x00000007,0
 
 [Window][Demo: Transition Editor]
 Pos=0,505
@@ -46,19 +44,20 @@ Size=384,384
 Collapsed=0
 
 [Window][Shader Editor]
-Pos=309,119
-Size=856,770
+Pos=316,120
+Size=842,834
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Preview]
-Pos=386,552
-Size=1154,389
+Pos=1160,120
+Size=368,499
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000007,0
 
 [Window][MainDockspace]
-Pos=0,0
-Size=1540,941
+Pos=8,6
+Size=1520,948
 Collapsed=0
 
 [Window][Scene: Buffers]
@@ -67,43 +66,47 @@ Size=383,255
 Collapsed=0
 
 [Window][Scene: Post Stack]
-Pos=0,582
-Size=307,307
+Pos=8,621
+Size=306,333
 Collapsed=0
+DockId=0x0000000A,0
 
 [Window][Scene: Textures & Channels]
-Pos=1167,582
-Size=369,307
+Pos=1160,621
+Size=368,333
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][FX: Library]
-Pos=0,119
-Size=338,533
+Pos=8,120
+Size=337,509
 Collapsed=0
 
 [Window][FX: Chain]
-Pos=340,119
-Size=862,241
+Pos=347,120
+Size=844,234
 Collapsed=0
 
 [Window][FX: Source]
-Pos=0,119
-Size=338,822
+Pos=8,120
+Size=337,786
 Collapsed=0
 
 [Window][Scene: Library]
-Pos=0,119
-Size=307,461
+Pos=8,120
+Size=306,499
 Collapsed=0
+DockId=0x00000009,0
 
 [Window][Diagnostics]
-Pos=1167,582
-Size=369,307
+Pos=1160,621
+Size=368,333
 Collapsed=0
+DockId=0x00000008,1
 
 [Window][Audio Library]
-Pos=0,341
-Size=384,179
+Pos=8,384
+Size=383,261
 Collapsed=0
 
 [Window][About ShaderLab]
@@ -112,27 +115,28 @@ Size=520,520
 Collapsed=0
 
 [Window][Demo: Runtime Log]
-Pos=0,531
-Size=384,410
+Pos=8,120
+Size=383,786
 Collapsed=0
-DockId=0x00000008,0
 
 [Table][0x7085BF6B,5]
-RefScale=13
-Column 0  Width=30
+RefScale=12
+Column 0  Width=27
 Column 1  Weight=1.0000
-Column 2  Width=80
-Column 3  Width=50
-Column 4  Width=50
+Column 2  Width=73
+Column 3  Width=45
+Column 4  Width=45
 
 [Docking][Data]
-DockSpace       ID=0x5CACDEC3 Window=0x1C358F53 Pos=0,42 Size=1540,899 Split=Y
-  DockNode      ID=0x00000001 Parent=0x5CACDEC3 SizeRef=1540,75 Selected=0x04C1370C
-  DockNode      ID=0x00000002 Parent=0x5CACDEC3 SizeRef=1540,864 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=384,864 Split=Y
-      DockNode  ID=0x00000007 Parent=0x00000003 SizeRef=384,431 Selected=0x853287D7
-      DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=384,431 Selected=0xB884E234
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=1154,864 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=1154,431 Selected=0x5F14726E
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=1154,431 CentralNode=1 Selected=0xE41466B5
+DockSpace         ID=0x5CACDEC3 Window=0x1C358F53 Pos=8,46 Size=1520,908 Split=Y
+  DockNode        ID=0x00000001 Parent=0x5CACDEC3 SizeRef=1536,72 Selected=0x04C1370C
+  DockNode        ID=0x00000002 Parent=0x5CACDEC3 SizeRef=1536,838 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=306,838 Split=Y
+      DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=306,501 Selected=0xFD02D705
+      DockNode    ID=0x0000000A Parent=0x00000003 SizeRef=306,335 Selected=0x618EE035
+    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1228,838 Split=X
+      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=858,838 CentralNode=1 Selected=0x432BAE4E
+      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=368,838 Split=Y
+        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=368,501 Selected=0xE41466B5
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=368,335 Selected=0x80841A9A
 
