--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,68 @@ option(SHADERLAB_BUILD_RUNTIME "Build the standalone runtime" ON)
 option(SHADERLAB_ENABLE_DXC "Enable DXC shader compiler (requires dxcompiler.dll)" ON)
 option(SHADERLAB_STATIC_RUNTIME "Link MSVC runtime statically" OFF)
 option(SHADERLAB_USE_CRINKLER "Use Crinkler as the linker (self-contained builds)" OFF)
+option(SHADERLAB_CRINKLER_TINYIMPORT "Enable Crinkler /TINYIMPORT optimization" ON)
+option(SHADERLAB_RUNTIME_IMGUI "Enable ImGui debug overlay in runtime player" ON)
+option(SHADERLAB_COMPACT_TRACK_DEBUG "Enable compact track runtime debug logs" OFF)
+option(SHADERLAB_RUNTIME_DEBUG_LOG "Enable general runtime debug logs" OFF)
+option(SHADERLAB_TINY_PLAYER "Enable ultra-minimal runtime profile (strips optional subsystems)" OFF)
+option(SHADERLAB_BUILD_MICRO_PLAYER "Build ultra-minimal benchmark runtime target" OFF)
 set(CRINKLER_PATH "" CACHE FILEPATH "Path to crinkler.exe")
 
 # Platform check
 if(NOT WIN32)
     message(FATAL_ERROR "ShaderLab currently supports Windows only")
+endif()
+
+if(SHADERLAB_BUILD_MICRO_PLAYER)
+    add_executable(ShaderLabMicroPlayer WIN32
+        src/app/runtime/main_micro_player.cpp
+    )
+
+    target_include_directories(ShaderLabMicroPlayer PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+    )
+
+    if(MSVC)
+        target_compile_options(ShaderLabMicroPlayer PRIVATE
+            /W4
+            /WX-
+            /Os
+            /Oy
+            /Oi
+            /GS-
+            /GR-
+            /Gy
+            /Gw
+            /GF
+            /Zc:threadSafeInit-
+        )
+
+        if(SHADERLAB_USE_CRINKLER)
+            target_link_options(ShaderLabMicroPlayer PRIVATE
+                /ENTRY:WinMainCRTStartup
+                /INCREMENTAL:NO
+                /MANIFEST:NO
+                /RELEASE
+                /COMPMODE:SLOW
+                /ORDERTRIES:120
+                /UNALIGNCODE
+            )
+            if(SHADERLAB_CRINKLER_TINYIMPORT)
+                target_link_options(ShaderLabMicroPlayer PRIVATE /TINYIMPORT)
+            endif()
+        else()
+            target_link_options(ShaderLabMicroPlayer PRIVATE
+                /ENTRY:WinMainCRTStartup
+                /INCREMENTAL:NO
+                /OPT:REF
+                /OPT:ICF
+                /LTCG
+                /MANIFEST:NO
+                /RELEASE
+            )
+        endif()
+    endif()
 endif()
 
 if(MSVC AND SHADERLAB_STATIC_RUNTIME)
@@ -41,24 +98,37 @@ endif()
 add_subdirectory(third_party)
 
 # Core modules
-add_library(ShaderLabCore STATIC
+set(SHADERLAB_CORE_RUNTIME_SOURCES
     src/graphics/Device.cpp
     src/graphics/Swapchain.cpp
     src/graphics/CommandQueue.cpp
     src/graphics/PreviewRenderer.cpp
     src/shader/ShaderCompiler.cpp
-    src/audio/AudioSystem.cpp
     src/audio/BeatClock.cpp
+    src/core/Serializer.cpp
+    src/core/PackageManager.cpp
+)
+
+if(NOT SHADERLAB_TINY_PLAYER OR SHADERLAB_BUILD_EDITOR)
+    list(APPEND SHADERLAB_CORE_RUNTIME_SOURCES
+        src/audio/AudioSystem.cpp
+    )
+endif()
+
+set(SHADERLAB_CORE_EDITOR_SOURCES
     src/ui/UISystem.cpp
+    src/ui/UISystem.Project.cpp
     src/ui/UISystem.Demo.cpp
     src/ui/UISystem.Render.cpp
     src/ui/UISystem.Editor.cpp
     src/ui/UISystemAssets.cpp
     src/ui/UISystem.About.cpp
-    src/core/Serializer.cpp
     src/core/BuildPipeline.cpp
     src/core/RuntimeExporter.cpp
-    src/core/PackageManager.cpp
+    third_party/ImGuiColorTextEdit/TextEditor.cpp
+)
+
+set(SHADERLAB_CORE_HEADER_SOURCES
     include/ShaderLab/Graphics/Device.h
     include/ShaderLab/Graphics/Swapchain.h
     include/ShaderLab/Graphics/CommandQueue.h
@@ -72,18 +142,29 @@ add_library(ShaderLabCore STATIC
     include/ShaderLab/Core/RuntimeExporter.h
     include/ShaderLab/Core/PackageManager.h
     include/ShaderLab/Core/ShaderLabData.h
-    third_party/ImGuiColorTextEdit/TextEditor.cpp
     third_party/ImGuiColorTextEdit/TextEditor.h
 )
+
+set(SHADERLAB_CORE_SOURCES ${SHADERLAB_CORE_RUNTIME_SOURCES} ${SHADERLAB_CORE_HEADER_SOURCES})
+if(SHADERLAB_BUILD_EDITOR)
+    list(APPEND SHADERLAB_CORE_SOURCES ${SHADERLAB_CORE_EDITOR_SOURCES})
+endif()
+
+add_library(ShaderLabCore STATIC ${SHADERLAB_CORE_SOURCES})
 
 target_include_directories(ShaderLabCore PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
     ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui
-    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/miniaudio
     ${CMAKE_CURRENT_SOURCE_DIR}/third_party/json/include
     ${CMAKE_CURRENT_SOURCE_DIR}/third_party/stb
     ${CMAKE_CURRENT_SOURCE_DIR}/third_party/ImGuiColorTextEdit
 )
+
+if(NOT SHADERLAB_TINY_PLAYER OR SHADERLAB_BUILD_EDITOR)
+    target_include_directories(ShaderLabCore PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/miniaudio
+    )
+endif()
 
 # Link D3D12 and related Windows libraries
 target_link_libraries(ShaderLabCore PUBLIC
@@ -98,7 +179,33 @@ if(SHADERLAB_ENABLE_DXC)
 endif()
 
 # ImGui integration
-target_link_libraries(ShaderLabCore PUBLIC imgui)
+if(SHADERLAB_BUILD_EDITOR OR (SHADERLAB_BUILD_RUNTIME AND SHADERLAB_RUNTIME_IMGUI))
+    target_link_libraries(ShaderLabCore PUBLIC imgui)
+endif()
+
+if(SHADERLAB_RUNTIME_IMGUI)
+    target_compile_definitions(ShaderLabCore PUBLIC SHADERLAB_RUNTIME_IMGUI=1)
+else()
+    target_compile_definitions(ShaderLabCore PUBLIC SHADERLAB_RUNTIME_IMGUI=0)
+endif()
+
+if(SHADERLAB_COMPACT_TRACK_DEBUG)
+    target_compile_definitions(ShaderLabCore PUBLIC SHADERLAB_COMPACT_TRACK_DEBUG=1)
+else()
+    target_compile_definitions(ShaderLabCore PUBLIC SHADERLAB_COMPACT_TRACK_DEBUG=0)
+endif()
+
+if(SHADERLAB_RUNTIME_DEBUG_LOG)
+    target_compile_definitions(ShaderLabCore PUBLIC SHADERLAB_RUNTIME_DEBUG_LOG=1)
+else()
+    target_compile_definitions(ShaderLabCore PUBLIC SHADERLAB_RUNTIME_DEBUG_LOG=0)
+endif()
+
+if(SHADERLAB_TINY_PLAYER)
+    target_compile_definitions(ShaderLabCore PUBLIC SHADERLAB_TINY_PLAYER=1)
+else()
+    target_compile_definitions(ShaderLabCore PUBLIC SHADERLAB_TINY_PLAYER=0)
+endif()
 
 # Compiler flags
 if(MSVC)
@@ -125,6 +232,21 @@ if(MSVC)
         if(NOT SHADERLAB_USE_CRINKLER)
             target_compile_options(ShaderLabCore PRIVATE /GL) # Whole program optimization
         endif()
+    endif()
+
+    if(SHADERLAB_TINY_PLAYER)
+        target_compile_options(ShaderLabCore PRIVATE
+            /Os
+            /Oy
+            /Oi
+            /fp:fast
+            /GS-
+            /GR-
+            /Gy
+            /Gw
+            /GF
+            /Zc:threadSafeInit-
+        )
     endif()
 endif()
 
@@ -182,4 +304,26 @@ if(SHADERLAB_BUILD_RUNTIME)
     target_include_directories(ShaderLabPlayer PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/include
     )
+
+    if(MSVC AND SHADERLAB_TINY_PLAYER)
+        if(SHADERLAB_USE_CRINKLER)
+            target_link_options(ShaderLabPlayer PRIVATE
+                /INCREMENTAL:NO
+                /MANIFEST:NO
+                /RELEASE
+                /COMPMODE:SLOW
+                /ORDERTRIES:80
+                /UNALIGNCODE
+            )
+        else()
+            target_link_options(ShaderLabPlayer PRIVATE
+                /INCREMENTAL:NO
+                /OPT:REF
+                /OPT:ICF
+                /LTCG
+                /MANIFEST:NO
+                /RELEASE
+            )
+        endif()
+    endif()
 endif()
