--- a/imgui.ini
+++ b/imgui.ini
@@ -44,20 +44,20 @@ Size=384,384
 Collapsed=0
 
 [Window][Shader Editor]
-Pos=316,120
-Size=842,834
+Pos=378,120
+Size=833,786
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Preview]
-Pos=1160,120
-Size=368,499
+Pos=1213,120
+Size=315,486
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][MainDockspace]
 Pos=8,6
-Size=1520,948
+Size=1520,900
 Collapsed=0
 
 [Window][Scene: Buffers]
@@ -66,14 +66,14 @@ Size=383,255
 Collapsed=0
 
 [Window][Scene: Post Stack]
-Pos=8,621
-Size=306,333
+Pos=8,435
+Size=368,471
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000000A,1
 
 [Window][Scene: Textures & Channels]
-Pos=1160,621
-Size=368,333
+Pos=1213,608
+Size=315,298
 Collapsed=0
 DockId=0x00000008,0
 
@@ -94,13 +94,13 @@ Collapsed=0
 
 [Window][Scene: Library]
 Pos=8,120
-Size=306,499
+Size=368,313
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Diagnostics]
-Pos=1160,621
-Size=368,333
+Pos=1213,608
+Size=315,298
 Collapsed=0
 DockId=0x00000008,1
 
@@ -110,13 +110,24 @@ Size=383,261
 Collapsed=0
 
 [Window][About ShaderLab]
-Pos=510,210
+Pos=508,196
 Size=520,520
 Collapsed=0
 
 [Window][Demo: Runtime Log]
 Pos=8,120
 Size=383,786
+Collapsed=0
+
+[Window][Scene: Snippets]
+Pos=8,435
+Size=368,471
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Build Settings]
+Pos=388,146
+Size=760,620
 Collapsed=0
 
 [Table][0x7085BF6B,5]
@@ -128,15 +139,15 @@ Column 3  Width=45
 Column 4  Width=45
 
 [Docking][Data]
-DockSpace         ID=0x5CACDEC3 Window=0x1C358F53 Pos=8,46 Size=1520,908 Split=Y
+DockSpace         ID=0x5CACDEC3 Window=0x1C358F53 Pos=8,46 Size=1520,860 Split=Y
   DockNode        ID=0x00000001 Parent=0x5CACDEC3 SizeRef=1536,72 Selected=0x04C1370C
   DockNode        ID=0x00000002 Parent=0x5CACDEC3 SizeRef=1536,838 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=306,838 Split=Y
-      DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=306,501 Selected=0xFD02D705
-      DockNode    ID=0x0000000A Parent=0x00000003 SizeRef=306,335 Selected=0x618EE035
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1228,838 Split=X
-      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=858,838 CentralNode=1 Selected=0x432BAE4E
-      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=368,838 Split=Y
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=368,501 Selected=0xE41466B5
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=368,335 Selected=0x80841A9A
+    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=368,838 Split=Y
+      DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=368,334 Selected=0xFD02D705
+      DockNode    ID=0x0000000A Parent=0x00000003 SizeRef=368,502 Selected=0xE56A4C5A
+    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1166,838 Split=X
+      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=849,838 CentralNode=1 Selected=0x432BAE4E
+      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=315,838 Split=Y
+        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=315,518 Selected=0xE41466B5
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=315,318 Selected=0xB4CBF21A
 
