--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,11 @@ cmake-build-*/
 .vs/
 .idea/
 .cache/
-.vscode/
+.vscode/*
+!.vscode/tasks.json
+!.vscode/build-debug.bat
+!.vscode/build-release.bat
+!.vscode/reconfigure.bat
 *.user
 *.suo
 *.sln
@@ -51,6 +55,7 @@ Thumbs.db
 third_party/*
 !third_party/.gitkeep
 !third_party/README.md
+!third_party/CMakeLists.txt
 
 # Temporary files
 *.tmp
