--- a/imgui.ini
+++ b/imgui.ini
@@ -32,11 +32,13 @@ DockId=0x00000001,0
 Pos=393,120
 Size=1135,418
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Demo: Scene Library]
 Pos=8,120
-Size=383,525
+Size=383,262
 Collapsed=0
+DockId=0x00000009,0
 
 [Window][Demo: Transition Editor]
 Pos=0,505
@@ -47,13 +49,12 @@ Collapsed=0
 Pos=378,120
 Size=833,786
 Collapsed=0
-DockId=0x00000005,0
 
 [Window][Preview]
-Pos=1213,120
-Size=315,486
+Pos=393,540
+Size=1135,366
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000006,0
 
 [Window][MainDockspace]
 Pos=8,6
@@ -69,13 +70,11 @@ Collapsed=0
 Pos=8,435
 Size=368,471
 Collapsed=0
-DockId=0x0000000A,1
 
 [Window][Scene: Textures & Channels]
 Pos=1213,608
 Size=315,298
 Collapsed=0
-DockId=0x00000008,0
 
 [Window][FX: Library]
 Pos=8,120
@@ -96,18 +95,17 @@ Collapsed=0
 Pos=8,120
 Size=368,313
 Collapsed=0
-DockId=0x00000009,0
 
 [Window][Diagnostics]
 Pos=1213,608
 Size=315,298
 Collapsed=0
-DockId=0x00000008,1
 
 [Window][Audio Library]
 Pos=8,384
 Size=383,261
 Collapsed=0
+DockId=0x0000000A,0
 
 [Window][About ShaderLab]
 Pos=508,196
@@ -115,15 +113,15 @@ Size=520,520
 Collapsed=0
 
 [Window][Demo: Runtime Log]
-Pos=8,120
-Size=383,786
+Pos=8,647
+Size=383,259
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][Scene: Snippets]
 Pos=8,435
 Size=368,471
 Collapsed=0
-DockId=0x0000000A,0
 
 [Window][Build Settings]
 Pos=388,146
@@ -142,12 +140,12 @@ Column 4  Width=45
 DockSpace         ID=0x5CACDEC3 Window=0x1C358F53 Pos=8,46 Size=1520,860 Split=Y
   DockNode        ID=0x00000001 Parent=0x5CACDEC3 SizeRef=1536,72 Selected=0x04C1370C
   DockNode        ID=0x00000002 Parent=0x5CACDEC3 SizeRef=1536,838 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=368,838 Split=Y
-      DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=368,334 Selected=0xFD02D705
-      DockNode    ID=0x0000000A Parent=0x00000003 SizeRef=368,502 Selected=0xE56A4C5A
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1166,838 Split=X
-      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=849,838 CentralNode=1 Selected=0x432BAE4E
-      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=315,838 Split=Y
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=315,518 Selected=0xE41466B5
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=315,318 Selected=0xB4CBF21A
+    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=383,838 Split=Y
+      DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=383,560 Split=Y
+        DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=383,279 Selected=0x853287D7
+        DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=383,279 Selected=0x562AE730
+      DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=383,276 Selected=0xB884E234
+    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1151,838 Split=Y
+      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1151,418 Selected=0x5F14726E
+      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=1151,418 CentralNode=1 Selected=0xE41466B5
 
