--- a/tools/dev_env.cfg
+++ b/tools/dev_env.cfg
@@ -3,4 +3,4 @@
 # Lines starting with # are ignored.
 # Example:
 # C:\Program Files\CMake\bin
-# C:\Users\espen\AppData\Local\Microsoft\WinGet\Packages\Ninja-build.Ninja_Microsoft.Winget.Source_8wekyb3d8bbwe
+# %LOCALAPPDATA%\Microsoft\WinGet\Packages\Ninja-build.Ninja_Microsoft.Winget.Source_8wekyb3d8bbwe
