--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ third_party/*
 !third_party/.gitkeep
 !third_party/README.md
 !third_party/CMakeLists.txt
+!third_party/ImGuiColorTextEdit/
 
 # Temporary files
 *.tmp
