--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,9 @@ third_party/*
 # Release artifacts (produced by CI / build_installer.ps1)
 artifacts/
 
+# Local experimentation workspace
+experiments/
+
 # Local/diagnostic artifacts not intended for source control
 preprocessed.txt
 _codeql_detected_source_root
