--- a/imgui.ini
+++ b/imgui.ini
@@ -23,22 +23,22 @@ Size=184,131
 Collapsed=0
 
 [Window][Transport]
-Pos=8,46
+Pos=8,68
 Size=1520,72
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Demo: Playlist]
-Pos=393,120
+Pos=393,142
 Size=1135,418
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Demo: Scene Library]
-Pos=8,120
-Size=383,262
+Pos=8,142
+Size=383,97
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000B,0
 
 [Window][Demo: Transition Editor]
 Pos=0,505
@@ -46,19 +46,19 @@ Size=384,384
 Collapsed=0
 
 [Window][Shader Editor]
-Pos=378,120
-Size=833,786
+Pos=378,142
+Size=833,742
 Collapsed=0
 
 [Window][Preview]
-Pos=393,540
-Size=1135,366
+Pos=393,562
+Size=1135,322
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][MainDockspace]
-Pos=8,6
-Size=1520,900
+Pos=8,28
+Size=1520,856
 Collapsed=0
 
 [Window][Scene: Buffers]
@@ -67,43 +67,43 @@ Size=383,255
 Collapsed=0
 
 [Window][Scene: Post Stack]
-Pos=8,435
-Size=368,471
+Pos=8,440
+Size=368,444
 Collapsed=0
 
 [Window][Scene: Textures & Channels]
-Pos=1213,608
-Size=315,298
+Pos=1213,603
+Size=315,281
 Collapsed=0
 
 [Window][FX: Library]
-Pos=8,120
-Size=337,509
+Pos=8,142
+Size=337,481
 Collapsed=0
 
 [Window][FX: Chain]
-Pos=347,120
+Pos=347,142
 Size=844,234
 Collapsed=0
 
 [Window][FX: Source]
-Pos=8,120
-Size=337,786
+Pos=8,625
+Size=337,259
 Collapsed=0
 
 [Window][Scene: Library]
-Pos=8,120
-Size=368,313
+Pos=8,142
+Size=368,296
 Collapsed=0
 
 [Window][Diagnostics]
-Pos=1213,608
-Size=315,298
+Pos=1213,603
+Size=315,281
 Collapsed=0
 
 [Window][Audio Library]
-Pos=8,384
-Size=383,261
+Pos=8,391
+Size=383,247
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -113,19 +113,30 @@ Size=520,520
 Collapsed=0
 
 [Window][Demo: Runtime Log]
-Pos=8,647
-Size=383,259
+Pos=8,640
+Size=383,244
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Scene: Snippets]
-Pos=8,435
-Size=368,471
+Pos=8,440
+Size=368,444
 Collapsed=0
 
 [Window][Build Settings]
 Pos=388,146
 Size=760,620
+Collapsed=0
+
+[Window][Demo: Metadata]
+Pos=8,241
+Size=383,148
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][Theme Editor]
+Pos=500,147
+Size=536,618
 Collapsed=0
 
 [Table][0x7085BF6B,5]
@@ -137,15 +148,17 @@ Column 3  Width=44
 Column 4  Width=44
 
 [Docking][Data]
-DockSpace         ID=0x5CACDEC3 Window=0x1C358F53 Pos=8,46 Size=1520,860 Split=Y
-  DockNode        ID=0x00000001 Parent=0x5CACDEC3 SizeRef=1536,72 Selected=0x04C1370C
-  DockNode        ID=0x00000002 Parent=0x5CACDEC3 SizeRef=1536,838 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=383,838 Split=Y
-      DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=383,560 Split=Y
-        DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=383,279 Selected=0x853287D7
-        DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=383,279 Selected=0x562AE730
-      DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=383,276 Selected=0xB884E234
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1151,838 Split=Y
-      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1151,418 Selected=0x5F14726E
-      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=1151,418 CentralNode=1 Selected=0xE41466B5
+DockSpace           ID=0x5CACDEC3 Window=0x1C358F53 Pos=8,68 Size=1520,816 Split=Y
+  DockNode          ID=0x00000001 Parent=0x5CACDEC3 SizeRef=1536,72 Selected=0x04C1370C
+  DockNode          ID=0x00000002 Parent=0x5CACDEC3 SizeRef=1536,838 Split=X
+    DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=383,838 Split=Y
+      DockNode      ID=0x00000007 Parent=0x00000003 SizeRef=383,560 Split=Y
+        DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=383,279 Split=Y
+          DockNode  ID=0x0000000B Parent=0x00000009 SizeRef=383,110 Selected=0x853287D7
+          DockNode  ID=0x0000000C Parent=0x00000009 SizeRef=383,167 Selected=0x7279676C
+        DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=383,279 Selected=0x562AE730
+      DockNode      ID=0x00000008 Parent=0x00000003 SizeRef=383,276 Selected=0xB884E234
+    DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=1151,838 Split=Y
+      DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=1151,418 Selected=0x5F14726E
+      DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=1151,418 CentralNode=1 Selected=0xE41466B5
 
